--- a/styles/style.css
+++ b/styles/style.css
@@ -189,13 +189,17 @@ body {
 
   .cabecalho__menu {
     justify-content: center;
-    gap: 2.5rem;
+    gap: 8%;
+  }
+
+  .cabecalho__menu__link {
+    font-size: 1.25rem;
   }
 
   .apresentacao {
     flex-direction: column-reverse;
     padding: 0% 10% 5% 10%;
-    gap: 2.5rem;
+    gap: 1.25rem;
   }
 
   .apresentacao__conteudo {
@@ -204,9 +208,35 @@ body {
 
   .apresentacao__conteudo__titulo {
     text-align: center;
+    font-size: 1.75rem;
   }
-
+  .apresentacao__conteudo__texto {
+    font-size: 1.25rem;
+  }
   .apresentacao__imagem {
     width: 60%;
+  }
+  .apresentacao__links {
+    gap: 1.25rem;
+  }
+  .apresentacao__links__subtitulo {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  .apresentacao__links__navegacao {
+    width: 70%;
+  }
+
+  .apresentacao__links__link__logo {
+    width: 12%;
+  }
+
+  .rodape {
+    font-size: 1rem;
+  }
+
+  .rodape__nome {
+    font-size: 3rem;
   }
 }
